Deal with overflow of tasks correctly

--- a/frontend/src/components/Backlog/BacklogDay.css
+++ b/frontend/src/components/Backlog/BacklogDay.css
@@ -3,7 +3,6 @@
   background-color: #F9F9F9;
   box-shadow: 0 1px 1px -1px rgba(0, 0, 0, .1), 0 2px 2px 0 rgba(0, 0, 0, .1), 0 1px 5px 0 rgba(0, 0, 0, .11);
   height: 250px;
-  overflow: hidden; /* TODO fix this hack */
 }
 
 .BacklogDayDateInfo {
@@ -17,4 +16,23 @@
 
 .BacklogDayDateInfoDateNum {
   font-weight: 500;
+}
+
+.BacklogDayTaskContainer {
+  position: relative;
+  height: calc(100% - 44px);
+  overflow: hidden;
+}
+
+.BacklogDayMoreTasksBar {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #333333;
+  opacity: 0.5;
+  color: #E7E7E7;
+  text-align: center;
+  font-size: 1em;
 }
