--- a/frontend/src/components/TaskView/TaskView.css
+++ b/frontend/src/components/TaskView/TaskView.css
@@ -5,7 +5,7 @@
 }
 
 .TaskViewFocusPanel {
-  width: 33%;
+  width: 320px;
 }
 
 .TaskViewFuturePanel {
